Position mobile fixes for all pages

--- a/css/style.css
+++ b/css/style.css
@@ -97,24 +97,25 @@ li > ul {
     margin-top: -30px;
   }
   .blog-mobile-screen.all-blogs {
-    margin-top: 15px;
+    margin-top: -30px;
   }
   .blog-mobile-screen {
-    margin-top: -55px;
+    margin-top: -15px;
   }
   .blog-mobile-screen h1 {
     margin-top: 10px;
   }
   .about-mobile-screen {
     margin-top: -10px;
-    margin-right:10px;
+    margin-left: 5px;
+    margin-right: 15px;
   }
   .about-mobile-screen h1 {
     margin-top: -15px !important;
   }
 
   .links-mobile-screen {
-    margin-top: -55px;
+    margin-top: -15px;
     margin-left: 5px;
     margin-right: 15px;
   }
@@ -122,7 +123,7 @@ li > ul {
     margin-top:10px;
   }
   .resume-mobile-screen {
-    margin-top: -55px;
+    margin-top: -25px;
   }
   .content-cover .ui.middle.aligned.centered.grid.text.container h1 {
     margin-top: 10px;
@@ -153,17 +154,15 @@ li > ul {
   }
   .sidebar-topnav-mobile.blog-theme-3 {
     background-color:rgba(0,0,0,0.3);
-    height: 65px;
+    height: 50px;
     width:100%;
-    margin-top: -35px !important;
     position:fixed !important;
     z-index: 6;
   }
   .sidebar-topnav-mobile.resume {
     background-color:rgba(0,0,0,0.3);
-    height: 60px;
+    height: 50px;
     width:100%;
-    margin-top: -35px !important;
     position:fixed !important;
     z-index: 6;
   }
@@ -196,6 +195,9 @@ li > ul {
   .ui.left.aligned.header.no-bottom.work, .ui.left.aligned.header.no-bottom.volunteer, .ui.left.aligned.header.no-bottom.awards, .ui.left.aligned.header.no-bottom.references {
     margin-top:12.5px;
   }
+  .ui.left.aligned.header.no-bottom.interests {
+    margin-top:25px;
+  }
   h3.ui.header {
     font-size: 1.5rem;
   }
@@ -203,7 +205,7 @@ li > ul {
     font-size: 1.8rem;
   }
   .ui.center.aligned.header.no-bottom.name {
-    margin-top: -30px !important;
+    margin-top: 0px !important;
   }
 
   /* FOOTER MOBILE */
